Fri Apr  8 23:36:44 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/ast/ast_expression.cpp (coerce_value):

	  Explicitly cast floating point values to ACE_UINT64 (or
	  ACE_UINT32 when ACE_LACKS_USIGNEDLONGLONG_T is defined) when
	  assigning to an ACE_UINT64 value.  Fixes g++ conversion
	  warnings.

	* TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp (queue_reset):
	* tao/NVList.cpp (item):
	* tao/append.cpp (append):
	* tao/skip.cpp (skip):

	  Initialize variables.  Addresses "variables may be used
	  unitialized" g++ 4.0 (CVS snapshot) warnings.

	* TAO_IDL/include/ast_decl.h (~COMMON_Base):
	* TAO_IDL/include/ast_generator.h (~AST_Generator):
	* TAO_IDL/include/utl_list.h (~UTL_ListActiveIterator):
	* tao/Collocation_Proxy_Broker.h (~Collocation_Proxy_Broker):
	* tao/GIOP_Message_Generator_Parser.h
	  (~TAO_GIOP_Message_Generator_Parser):
	* tao/New_Leader_Generator.h (~TAO_New_Leader_Generator):
	* tao/PortableServer/Upcall_Command.h (~Upcall_Command):

	  Added these virtual destructors.  Fixes "contains virtual
	  functions but non-virtual destructor" g++ 4.0 (CVS snapshot)
	  warnings.

Fri Apr  8 22:00:00 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/tests/InterfaceRepo/IFR_Test/Admin_Client.cpp
	  (enum_test):

	  Corrected emulated exception usage.

Fri Apr  8 16:44:00 2005  Gary Maxey <gary.maxey@hp.com>

        * orbsvcs/orbsvcs/Log/Log_Constraint_Visitors.cpp

	  Add missing semicolon

Fri Apr  8 13:15:00 2005  Gary Maxey <gary.maxey@hp.com>

        * tests/CDR/allocator.cpp
        * tests/CDR/growth.cpp
        * tests/OctetSeq/OctetSeq.cpp

          Use ACE_HRTIME_CONVERSION instead of ACE_U64_TO_U32 for
          platform independence.

        * tests/Collocation_Tests/Hello.cpp

          Use portable thread IDs

        * tests/Queued_Message_Test/Queued_Message_Test.cpp

          Add conditional code for platform

Fri Apr  8 12:32:00 2005  Gary Maxey <gary.maxey@hp.com>

        * tao/Any_Basic_Impl.cpp
